--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,23 +1,22 @@
-pipeline{
-agent any
-stages{
-stage('Compile Stage')
- {
-steps{
-withMaven(maven: 'Maven'){
-sh 'mvn clean'
-          }
-     }
-  }
-  stage('Testing Stage')
- {
-steps{
-withMaven(maven: 'Maven'){
-sh 'mvn test'
-          }
-     }
-  }
-}
+pipeline {
 
+    agent any
+    tools {
+        maven 'Maven_3.5.2' 
+    }
+    stages {
+        stage('Compile stage') {
+            steps {
+                bat "mvn clean compile" 
+        }
+    }
+
+         stage('testing stage') {
+             steps {
+                bat "mvn test"
+        }
+    }
+
+  }
 
 }
